fix courses height on small screens

--- a/react-frontend/src/components/CourseCard/courseCard.css
+++ b/react-frontend/src/components/CourseCard/courseCard.css
@@ -31,7 +31,7 @@
 }
 
 .courses-content.active {
-    max-height: 1000px;
+    max-height: 1500px;
 }
 
 
